# src/main/java/org/owlaw/n8nhelper/pdf/dto/PdfMultiStampRequest.java
@@ -5,7 +5,11 @@ import java.util.List;
 
 public class PdfMultiStampRequest {
     private List<PdfStamp> stamps;
+    private String outputFileName;
 
     public List<PdfStamp> getStamps() { return stamps; }
     public void setStamps(List<PdfStamp> stamps) { this.stamps = stamps; }
+    
+    public String getOutputFileName() { return outputFileName; }
+    public void setOutputFileName(String outputFileName) { this.outputFileName = outputFileName; }
 }
